PCS BAckup 26Dec2023/Backup-Source/objects/IDN_Charge_Back__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF( ISNULL(Contract__r.Phoenix_Customer__r.AccountNumber), NULL, Contract__r.Phoenix_Customer__r.AccountNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IDN Charge Back</relationshipLabel>
        <relationshipName>IDN_Charge_Back</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Number__c</fullName>
        <label>CR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child1_Firm_Type__c</fullName>
        <label>Child1 Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child1_Name__c</fullName>
        <label>Child1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child2_Firm_Type__c</fullName>
        <label>Child2 Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child2_Name__c</fullName>
        <label>Child2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_1__c</fullName>
        <label>Child1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_2__c</fullName>
        <label>Child 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_date__c</fullName>
        <label>Claim date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Description__c</fullName>
        <label>Contact Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Sales_Indirect_Price__c</fullName>
        <label>Contract Sales Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>IDN Charge Back</relationshipLabel>
        <relationshipName>IDN_Charge_Back</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dea_Number__c</fullName>
        <label>Dea Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Memo_Date__c</fullName>
        <label>Debit Memo Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Memo_Number__c</fullName>
        <label>Debit Memo Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Id__c</fullName>
        <label>Hospital Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <label>Hospital Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Dea__c</fullName>
        <label>Member Dea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <label>Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <label>Member Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_State__c</fullName>
        <label>Member State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Street__c</fullName>
        <label>Member Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <label>Month_Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC_Code__c</fullName>
        <label>NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Chargeback_Amount__c</fullName>
        <label>Paid Chargeback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Firm_Type__c</fullName>
        <label>Parent Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>IDN Charge Back</relationshipLabel>
        <relationshipName>IDN_Charge_Back</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Dtls_Rep__c</fullName>
        <label>Rep Dtls Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Territory__c</fullName>
        <label>Sales Rep Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Number__c</fullName>
        <label>Settlement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Paid_Date__c</fullName>
        <label>Settlement Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Week__c</fullName>
        <label>Settlement Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_to_Name__c</fullName>
        <label>Sold to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Number__c</fullName>
        <label>Sold to Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <label>Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Number__c</fullName>
        <label>Submitter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <formula>contact_id__c+&apos;-&apos;+ Text(Settlement_Paid_Date__c)+&apos;-&apos;+ Text(invoice_date__c)+&apos;-&apos;+ invoice_number__c+&apos;-&apos;+ Material_Number__c +&apos;-&apos;+ text(contract_units_paid_qty__c) +&apos;-&apos;+Text(Contract_Sales_Indirect_Price__c) +&apos;-&apos;+ text(Paid_Chargeback_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Dtls_Rep__c</fullName>
        <label>Zip Dtls Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_external_id__c</fullName>
        <label>Contact External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_id__c</fullName>
        <label>Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract_units_paid_qty__c</fullName>
        <label>Contract Units Paid Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customer_segment__c</fullName>
        <label>Customer Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fiscal_quarter__c</fullName>
        <label>Fiscal_quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoice_date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoice_number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>material_alias__c</fullName>
        <label>Material Alias</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>material_description__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>member_city__c</fullName>
        <label>Member City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>member_postal_code__c</fullName>
        <label>Member Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_segment__c</fullName>
        <label>Product Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revised_product_family__c</fullName>
        <label>Revised Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>year_month__c</fullName>
        <label>Year Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IDN Charge Back</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Rep_Territory__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Hospital_Name__c</columns>
        <columns>Child_1__c</columns>
        <columns>Child_2__c</columns>
        <columns>Child1_Name__c</columns>
        <columns>Child2_Name__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>IDN Charge Back Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDN Charge Back</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>